--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <body>
     <section>
         <p>section</p>
-        <article>
+        <article class="flex-container">
             <p>article</p>
-            <article class="h1,h2,h3">
-                <p>h1,h2,h3</p>
-                <p>p</p>
-                <br>
-            </article>
+            <div>h1,h2,h3</div>
+            <div>p</div>
+            </div>
+
     </section>
     <aside>
         <p>aside</p>
     </aside>
+
 
 </body>
 <footer>
