--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>section</p>
         <article class="flex-container">
             <p>article</p>
-            <div>h1,h2,h3</div>
+            <div><strong>h1,h2,h3</strong></div>
             <div>p</div>
             </div>
 
